--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Twitch-Points-Song-Request",
+  "name": "twitch-points-song-request",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,8 +25,13 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.2.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "wait-on": "^5.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1"
   }
 }
