--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://relaxed-lalande-8da960.netlify.app"
 languageCode = "en-us"
 title = "My New Hugo Site"
