--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "dotenv-webpack": "^1.7.0",
-    "firebase": "^7.14.2"
+    "firebase": "^7.14.2",
+    "tmi.js": "^1.5.0"
   }
 }
