--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,10 @@
 publish = "public"
 command = "yarn run build && hugo --gc --minify"
 
+[dev]
+command = "yarn start"
+autoLaunch = true
+
 [context.production.environment]
 HUGO_VERSION = "0.69.2"
 HUGO_ENV = "production"
@@ -24,7 +28,6 @@ HUGO_VERSION = "0.69.2"
 command = "yarn run build && hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy.environment]
-TWITCH_REDIRECT_URL = "$DEPLOY_PRIME_URL /user/"
 HUGO_VERSION = "0.69.2"
 
 [context.next.environment]
