--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "wait-on": "^5.0.0",
@@ -35,6 +38,7 @@
     "bootstrap": "^4.4.1",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.14.2",
+    "regenerator-runtime": "^0.13.5",
     "tmi.js": "^1.5.0"
   }
 }
