I added some configurations, because stickler cant find some modules for some reason

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "arrow-parens": "off",
-    // "no-undef": "off",
+    "import/no-unresolved": "off",
     "prefer-destructuring": ["error", {"object": true, "array": false}],
     "import/no-cycle": "off"
   }
