QUICKFIX I forgot to change the main url to the newOne

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "https://relaxed-lalande-8da960.netlify.app"
+baseURL = "https://twitch-points-suite.netlify.app/"
 languageCode = "en-us"
 title = "Song Request"
