I added the anonimus auth to comply with the firebase requirements Also, now the folder is decided by a merge between the username and some salt

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
 publish = "public"
 command = "yarn run build && hugo --gc --minify"
+functions = "functions/"
 
 [dev]
 command = "yarn start"
