--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "^4.0.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.14.2",
+    "node-fetch": "^2.6.0",
     "regenerator-runtime": "^0.13.5",
     "tmi.js": "^1.5.0"
   }
