--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "concurrently npm:watch-*",
     "watch-webpack": "webpack --mode=development --watch",
     "watch-hugo": "wait-on ./assets/js/bundle.js && hugo server",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "build-lambda": "netlify-lambda install"
   },
   "repository": {
     "type": "git",
@@ -36,10 +37,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "crypto-js": "^4.0.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.14.2",
-    "node-fetch": "^2.6.0",
+    "netlify-lambda": "^1.6.3",
     "regenerator-runtime": "^0.13.5",
     "tmi.js": "^1.5.0"
   }
