--- a/sample.env
+++ b/sample.env
@@ -1,13 +1,23 @@
-FIREBASE_API_KEY=
-FIREBASE_APP_ID=
-FIREBASE_AUTH_DOMAIN=
-FIREBASE_DATABASE_URL=
-FIREBASE_MEASUREMENT_ID=
-FIREBASE_MESSAGING_SENDER_ID=
-FIREBASE_PROJECT_ID=
-FIREBASE_STORAGE_BUCKET=
-SALT=
-HUGO_VERSION=
-TWITCH_CLIENT_ID=
-TWITCH_REDIRECT_URL=
-TWITCH_SCOPES=
+FIREBASE_API_KEY={FIREBASE_API_KEY}
+FIREBASE_APP_ID={FIREBASE_APP_ID}
+FIREBASE_AUTH_DOMAIN={FIREBASE_AUTH_DOMAIN}
+FIREBASE_DATABASE_URL={FIREBASE_DATABASE_URL}
+FIREBASE_MEASUREMENT_ID={FIREBASE_MEASUREMENT_ID}
+FIREBASE_MESSAGING_SENDER_ID={FIREBASE_MESSAGING_SENDER_ID}
+FIREBASE_PROJECT_ID={FIREBASE_PROJECT_ID}
+FIREBASE_STORAGE_BUCKET={FIREBASE_STORAGE_BUCKET}
+SALT=X3WX6rnHztSCQKeqG27KDw==
+HUGO_VERSION=0.74.3
+TWITCH_CLIENT_ID={TWITCH_CLIENT_ID}
+TWITCH_REDIRECT_URL=http://localhost:8888/user/
+TWITCH_SCOPES=user:read:email
+
+//the values already set are recommended,
+//if you're not sure what you're doing,
+//just leave them there,
+
+//you can find the ones enclosed in {parentesis} here:
+//https://firebase.google.com/
+//https://dev.twitch.tv/
+
+//paste them without the parenteshis tho xD.
